# lrnn

./: LICENSE  README.md  actionselection.py  attention.py  inputdata.py  kitdata.py  kitdatavis.py  lrnn.py  lrnntune.py
MMMSegmentwiseCSVExporter/: CMakeLists.txt  MMMSegmentwiseCSVExporter.cpp  MMMSegmentwiseCSVExporterConfiguration.h
datasets/kit/models/: frying_pan.stl  oil_bottle.stl  spatula.stl
matlab/General/: createEnum.m
matlab/InputData/: CompoundInput.m  DataSet.m  Fsdd.m  FsddInput.m  InputData.m  MultTrialDataSet.m  ShiftedImgInput.m  SynthActInput.m  SynthActions.m  SynthPlanInput.m  SynthPlans.m  WardInput.m
